<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiTag</string>
    <string name="action_settings">Settings</string>
    <string name="main_lobby">Main Lobby</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="teamPi">teamPi</string>
    <string name="slogan">The Tag Game for Grown Ups</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="parseApp_ID">AUGlscWFinH8OICgtncqVF5xFuGY0NIvXmjmaHjX</string>
    <string name="parseClient_ID">2itivmsVyX5Awmhdf67e89Y5Apz8sEmscCrdA4UO</string>
    <string name="mapsAPIkeyV2">AIzaSyCcOfnoul8Lpu0w0kmBh3cUaKDRM2ZxaS4</string>
    <string name="mainLobbyTitle">Active Games</string>
    <string name="createGame">create game</string>
    <string name="gameSettings">Game Settings</string>
    <string name="playerSettings">Player Settings</string>
    <string name="gameplay_radius">Game Radius</string>
    <string name="time_limit">Time Limit</string>
    <string name="tagradius">Tag Radius</string>
    <string name="taglimit">Tag Limit</string>
    <string name="avatar">Avatar</string>
    <string name="apply">Apply</string>
    <string name="defaultSettings">Default</string>
    <string name="activity_suspension_title">Suspension List</string>
    <string-array name="times_array">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>24 hours</item>
        <item>No Limit</item>
    </string-array>
    <string name="game_lobby">Game Lobby</string>
    <string name="exit_lobby">Exit Lobby</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="start_game">Start Game</string>

</resources>