<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff363136">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".GameSettingsActivity">

            <TextView
                android:id="@+id/gamesettings_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameSettings"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="#ffc16721"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/gpradius_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_radius"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="normal"
                android:textColor="#ffc16721"
                android:layout_below="@+id/gamesettings_textview"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp" />

            <NumberPicker
                android:textColor="#ffffff"
                android:id="@+id/gpRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gpradius_textview"
                android:layout_alignLeft="@+id/gpradius_textview"
                android:layout_alignStart="@+id/gpradius_textview"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="25dp"
                android:text="@string/tagradius"
                android:textColor="#ffc16721"
                android:id="@+id/tag_textview"
                android:layout_below="@+id/gpRadius"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />

            <RadioGroup
                android:id="@+id/tag_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tag_textview"

                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="5"
                    android:id="@+id/five_meters" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ten_meters"
                    android:textColor="#FFFFFF"
                    android:text="10"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/twenty_meters"
                    android:textColor="#FFFFFF"
                    android:text="20" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fifty_meters"
                    android:textColor="#FFFFFF"
                    android:text="50" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/taglimit"
                android:textColor="#ffc16721"
                android:id="@+id/limit_textView"
                android:layout_below="@+id/tag_radiogroup"
                android:layout_alignLeft="@+id/tag_textview"
                android:layout_alignStart="@+id/tag_textview" />

            <RadioGroup
                android:id="@+id/limit_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/limit_textView"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/one"
                    android:textColor="#FFFFFF"
                    android:text="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/three"
                    android:textColor="#FFFFFF"
                    android:text="3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/five"
                    android:textColor="#FFFFFF"
                    android:text="5"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7"
                    android:textColor="#FFFFFF"
                    android:id="@+id/seven" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nine"
                    android:textColor="#FFFFFF"
                    android:text="9" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/unlimited"
                    android:textColor="#FFFFFF"
                    android:text="0"/>
            </RadioGroup>

            <Spinner
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:textColor="#FFFFFF"
                android:layout_toEndOf="@+id/gpradius_textview"
                android:layout_toRightOf="@+id/gpradius_textview"
                android:layout_below="@+id/gpradius_textview"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/time_textView"
                android:layout_alignLeft="@+id/time_textView"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffc16721"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_limit"
                android:id="@+id/time_textView"
                android:layout_below="@+id/gamesettings_textview"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/gpradius_textview"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/playerSettings"
                android:textColor="#ffc16721"
                android:textStyle="bold"
                android:id="@+id/playerSettings_textview"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/limit_radiogroup"
                android:layout_alignLeft="@+id/gamesettings_textview"
                android:layout_alignStart="@+id/gamesettings_textview" />

            <TextView
                android:id="@+id/avatar_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="normal"
                android:textColor="#ffc16721"
                android:layout_below="@+id/playerSettings_textview"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp" />

            <HorizontalScrollView
                android:id="@+id/avatar_scrollview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/avatar_textview"
                android:layout_marginLeft="15dp"

                >

                <RadioGroup
                    android:id="@+id/avatar_radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_crab"
                        android:id="@+id/crab"
                        android:tag="crab"
                        android:checked="true"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_jellyfish"
                        android:id="@+id/jellyfish"
                        android:tag="jellyfish"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_octopus"
                        android:id="@+id/octopus"
                        android:tag="octopus"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_seahorse"
                        android:id="@+id/seahorse"
                        android:tag="seahorse"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_sponge"
                        android:id="@+id/sponge"
                        android:tag="sponge"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_starfish"
                        android:id="@+id/starfish"
                        android:tag="starfish"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_this_is_bait"
                        android:id="@+id/fish"
                        android:tag="fish"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/orange_turtle"
                        android:id="@+id/turtle"
                        android:tag="turtle"/>
                </RadioGroup>
            </HorizontalScrollView>
        </RelativeLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:id="@+id/done_button"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultSettings"
            android:id="@+id/default_settings_button"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="right|bottom"
            android:onClick=""/>
    </LinearLayout>
</RelativeLayout>